Fix dark mode skeleton

--- a/app/pages/Home/styles.module.scss
+++ b/app/pages/Home/styles.module.scss
@@ -57,11 +57,6 @@
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   overflow: hidden;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0) 40%,
-    rgba(255, 255, 255, 1) 95%
-  );
 
   .skeletonHeadingWrapper {
     display: flex;
@@ -102,6 +97,7 @@
   left: 0;
   pointer-events: none;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
+  transition: background-image 1s ease;
   box-shadow: 0 15px 10px 0 rgba(255, 255, 255, 1);
   width: 100%;
   height: 10em;
@@ -122,5 +118,15 @@
   .skeletonWrapper {
     background-color: $dark-surface;
     transition: background-color 1s ease;
+  }
+
+  .listBottomText {
+    color: $dark-text-color;
+  }
+
+  .skeletonWrapper:after {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(18, 18, 18, 1) 90%);
+    transition: background-image 1s ease;
+    box-shadow: 0 15px 10px 0 rgba(18, 18, 18, 1);
   }
 }
